21327 Update dependencies (#171)
Updated dependencies and fixed issue with DinaRepoRestIT